--- a/ParseH264/ParseH264/ParseH264.vcxproj.filters
+++ b/ParseH264/ParseH264/ParseH264.vcxproj.filters
@@ -48,6 +48,18 @@
     <ClInclude Include="targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="resource1.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="resource2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="resource3.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="resource4.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="h264_analyze.cpp">
@@ -76,25 +88,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\res\264.ico">
+    <ResourceCompile Include="ParseH264.rc">
       <Filter>资源文件</Filter>
-    </Image>
-    <Image Include="..\res\264_ico.png">
-      <Filter>资源文件</Filter>
-    </Image>
-    <Image Include="..\res\main_theme_h264.bmp">
-      <Filter>资源文件</Filter>
-    </Image>
-    <Image Include="..\res\main_theme_h264_en.bmp">
-      <Filter>资源文件</Filter>
-    </Image>
-    <Image Include="..\res\SpecialVH264.ico">
-      <Filter>资源文件</Filter>
-    </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\res\SpecialVH264.rc2">
-      <Filter>资源文件</Filter>
-    </None>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
